--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	                        <p class="hero-paragraph">Stay tuned for further details in the coming weeks. Follow our social media below to stay updated.</p>
 	                        <div class="hero-cta">
 								<div class="grow"><a class="button button-primary" href="https://linktr.ee/CUCAI2022">Get Connected with Us</a></div>
-								<div class="grow"><a class="button button-primary" href="https://cucai.ca">Learn about CUCAI 2021</a></div>
+								<div class="grow"><a class="button button-primary" href="https://2021.cucai.ca">Learn about CUCAI 2021</a></div>
 									<input id="lights-toggle" type="checkbox" name="lights-toggle" class="switch" checked="" hidden>
 
 							</div>
