--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>CUCAI 2022</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|IBM+Plex+Sans:600" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
+    <link rel="icon" type="image/x-icon" href="src/images/cucai.svg" />
+    <link rel="mask-icon" href="src/images/cucai.svg" color="#000000">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
 <body class="is-boxed has-animations">
