--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <title>CUCAI 2022</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|IBM+Plex+Sans:600" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
-    <link rel="icon" type="image/x-icon" href="src/images/cucai.svg" />
-    <link rel="mask-icon" href="src/images/cucai.svg" color="#000000">
+    <link rel="apple-touch-icon" sizes="180x180" href="src/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="src/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="src/images/favicon-16x16.png">
+    <link rel="manifest" href="src/images/site.webmanifest">
+    <link rel="mask-icon" href="src/images/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
 <body class="is-boxed has-animations">
